--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <p class="card-text">Engage with our interactive ‘Let’s Talk’ button, articulate your inquiries to our advanced Chat-GPT, and simply press the ‘Play’ button to experience a tailored solution in an auditory format.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item d-flex justify-content-center"><button type="button" style="max-width: 100%; width: 100%;" class="btn btn-primary flex" >Let's talk!</button></li>
+        <li class="list-group-item d-flex justify-content-center"><button type="button" style="max-width: 100%; width: 100%;" class="btn btn-primary flex" id="button">Let's talk!</button></li>
         <li class="list-group-item d-flex justify-content-center"><button type="button" style="max-width: 100%; width: 100%;" class="btn btn-success" id="play-button">Play</button></li>
         <li class="list-group-item"><audio id="audio" style="max-width: 100%; width: 100%;" controls></audio></li>
       </ul>
